k8s_bowWebsite/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bowwebsite-backend-service
spec:
  selector:
    app: bowwebsite-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
