k8s_bowWebsite/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bowwebsite-frontend-service
spec:
  selector:
    app: bowwebsite-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
